# file-diploma

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
entrypoints/: start.sh
src/app/: config.py  main.py
src/app/application/: entities.py  services.py
src/app/infra/: access_gateway.py  minio_gateway.py  mongo_repositories.py
src/app/presentation/: schemas.py
src/tests/: conftest.py
src/tests/unit/: test_file_application_service.py
