[tool.poetry]
name = "file"
version = "0.1.0"
description = ""
authors = ["flesm <ostrovskijan659@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.12"}
uvicorn = "^0.34.0"
httpx = "^0.28.1"
motor = "^3.7.0"
minio = "^7.2.15"
pydantic-settings = "^2.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
